# AI-Ops-Agent-AgentCore

./: .env.example  .gitignore  CLAUDE.md  README.md  claude.md
agentcore/: README.md  deploy_infra.sh
agentcore/cloudformation/: infrastructure.yaml
agentcore/runtime/: .bedrock_agentcore.yaml  Dockerfile  entrypoint.py  requirements.txt
agentcore/scripts/: cleanup.py  deploy.py  invoke.py  util.py
data/RAG/refrigerator/: Diagnostics.md  Distribution Portal.md  Firmware Update.md  Glossary.md  Model Matching.md  Product Line.md  Service Portal.md  Smart Feature.md  SmartThings Portal.md
data/RAG/refrigerator_yaml/: diagnostics.yaml  distribution_portal.yaml  firmware_update.yaml  glossary.yaml  index.yaml  model_matching.yaml  product_line.yaml  service_portal.yaml  smart_feature.yaml  smartthings_portal.yaml
data/RAG/refrigerator_yaml/bedrock_upload/: diagnostics-001.md  diagnostics-001.md.metadata.json  diagnostics-002.md  diagnostics-002.md.metadata.json  diagnostics-003.md  diagnostics-003.md.metadata.json  diagnostics-004.md  diagnostics-004.md.metadata.json  diagnostics-005.md  diagnostics-005.md.metadata.json  (+204 more)
docs/: environment-configuration.md  observability-langfuse.md  rag-knowledge-base-design.md
docs/architecture/: evaluation-design.md  graph-workflow.md  streaming-implementation.md
docs/knowledge-base/: data-guide.md  kb-agent-integration.md  kb-evaluation.md  rag-knowledge-base-design.md  rag-pipeline.md
docs/reference/: research-guide-results.md
docs/setup/: environment-configuration.md  observability-langfuse.md
rag_pipeline/: convert_md_to_yaml.py  create_kb.py  datasets.yaml  evaluate_retrieval.py  llm_enrich.py  prepare_and_sync.py
setup/: create_env.sh  pyproject.toml
src/ops_agent/: __init__.py  main.py
src/ops_agent/agent/: __init__.py  ops_agent.py
src/ops_agent/config/: __init__.py  settings.py
src/ops_agent/evaluation/: __init__.py  evaluator.py  models.py
src/ops_agent/graph/: __init__.py  conditions.py  function_node.py  nodes.py  runner.py  state.py  util.py
src/ops_agent/prompts/: __init__.py  kb_enrichment.md  ops_agent_en.md  ops_agent_ko.md  system_prompt.py  template.py
src/ops_agent/telemetry/: __init__.py  setup.py
src/ops_agent/tools/: __init__.py  util.py
tests/: __init__.py  test_evaluation.py  test_langfuse.py  test_manual.py
tests/backup/: test_cloudwatch_mcp.py  test_manual.py  test_mcp_manual.py
under_development/: knowledge_base.py
(+120 files in other folders)
