[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-ai-agent"
version = "0.1.0"
description = "AI-powered operations automation agent for monitoring, problem detection, and automated response"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ops AI Team" }
]
keywords = ["ai", "operations", "monitoring", "aws", "datadog", "cloudwatch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "strands-agents[otel]>=0.1.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    # AgentCore Runtime deployment
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "boto3-stubs[bedrock,bedrock-runtime,bedrock-agent-runtime,logs,cloudwatch]>=1.35.0",
]
datadog = [
    "datadog-api-client>=2.20.0",
]

[project.scripts]
ops-agent = "ops_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ops_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ops_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "strands.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true
